# py_swe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
example/: example_linear_models.py  example_tsunami_pulse.py  example_weak_scaling.py  shallow_water_example.py  shallow_water_example_2.py  shallow_water_example_weak_scaling.py
mpi4jax_wrapper/: __init__.py
mpi4jax_wrapper/_src/: __init__.py  recv.py  send.py  sendrecv.py  test_send_and_recv.py  test_sendrecv.py
py_swe/: adm.py  exchange_halos.py  geometry.py  model.py  ode_integrate.py  state.py  tlm.py  visualize.py
shallow_water/: adm.py  exchange_halos.py  geometry.py  model.py  ode_integrate.py  runtime_context.py  scan_functions.py  state.py  tlm.py
tests/: test_exchange_halos.py  test_geometry.py  test_linearization_checks.py  test_model.py  test_shallow_water_linearization.py  test_state.py  test_state_gather_field.py
validation/: linearization_checks.py
